# rag_indexer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  TODO.md  all_tests.sh  docker-compose.yml  pyproject.toml  sample.env  start.sh
.github/workflows/: docker-image.yml
src/ingestwatch/: DocumentIndexer.py  QdrantIndexer.py  __init__.py  __main__.py  config.py  frontend.py  index_database.py  ingest_watch.py  models.py
src/ingestwatch/documents/: ADocument.py  DocDocument.py  Document.py  DocumentFactory.py  MarkdownDocument.py  PdfDocument.py  XlsDocument.py  new_ocr.py
src/ragindexer/: DocumentIndexer.py  QdrantIndexer.py  __init__.py  __main__.py  config.py  index_database.py
src/ragindexer/documents/: ADocument.py  DocDocument.py  DocumentFactory.py  MarkdownDocument.py  PdfDocument.py  XlsDocument.py
tests/: coverage.conf  docker-compose.yml  test_api.py  test_langchain.py  test_unstructured.py
tests/inputs/docs/: Marina Robledo.docx
