[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ingestwatch"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "watchdog>=2.1.9",
    "qdrant-client>=1.6.0",
    "sentence-transformers>=2.2.2",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.2",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3",
    "nltk>=3.7",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "openai>=1.84.0",
    "gradio>=5.33.0",
    "markdown>=3.8",
]

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/ingestwatch/-/issues"
Homepage = "https://github.com/ydethe/ingestwatch"
Source = "https://github.com/ydethe/ingestwatch"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py310']

[tool.uv]
resolution = "highest"

[tool.pdm.version]
source = "scm"

[dependency-groups]
dev = [
    "black==22.3.0",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]
doc = [
    "pdoc3>=0.11.3",
    "pylint>=3.3.2",
]
test = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
]
