[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ingestwatch"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.33.0",
    "markdown>=3.8",
    "nltk>=3.9.1",
    "openai>=1.84.0",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pydantic-settings>=2.9.1",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "qdrant-client>=1.14.2",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "torch",
    "torchaudio",
    "torchvision",
    "watchdog>=6.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/ingestwatch/-/issues"
Homepage = "https://github.com/ydethe/ingestwatch"
Source = "https://github.com/ydethe/ingestwatch"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py310']

[tool.uv]
resolution = "highest"

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pdm.version]
source = "scm"

[dependency-groups]
dev = [
    "black==22.3.0",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]
doc = [
    "pdoc3>=0.11.3",
    "pylint>=3.3.2",
]
test = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
]
