[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ragindexer"
dynamic = ["version"]
requires-python = ">=3.11"
readme = "README.md"
description = ""
dependencies = [
    "langchain-community>=0.3.26",
    "langchain-pymupdf4llm>=0.4.1",
    "langchain[openai]>=0.3.26",
    "pydantic-settings>=2.9.1",
    "pytesseract>=0.3.13",
    "python-json-logger>=3.3.0",
    "qdrant-client>=1.14.2",
    "solus>=1.2.2",
    "watchdog>=6.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/ragindexer/-/issues"
Homepage = "https://github.com/ydethe/ragindexer"
Source = "https://github.com/ydethe/ragindexer"

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py310']

[tool.uv]
resolution = "highest"

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pdm.version]
source = "scm"

[dependency-groups]
dev = [
    "black==22.3.0",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]
doc = [
    "docstr-coverage>=2.3.2",
    "genbadge[all]>=1.1.1,<2.0.0",
    "pdoc3>=0.11.3",
    "pylint>=3.3.2",
]
test = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "coverage>=7.8.2",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--html=htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=htmldoc/junit.xml",
    "--cov-config=tests/coverage.conf",
    "--cov=ragindexer",
    "--doctest-modules",
]
testpaths = [
    "tests/",
]
